; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_ebur128.c_ff_ebur128_loudness_shortterm.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_ebur128.c_ff_ebur128_loudness_shortterm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HUGE_VAL = common dso_local global double 0.000000e+00, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_ebur128_loudness_shortterm(i32* %0, double* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca double*, align 8
  %6 = alloca double, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store double* %1, double** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @ebur128_energy_shortterm(i32* %8, double* %6)
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* %7, align 4
  store i32 %13, i32* %3, align 4
  br label %26

14:                                               ; preds = %2
  %15 = load double, double* %6, align 8
  %16 = fcmp ole double %15, 0.000000e+00
  br i1 %16, label %17, label %21

17:                                               ; preds = %14
  %18 = load double, double* @HUGE_VAL, align 8
  %19 = fneg double %18
  %20 = load double*, double** %5, align 8
  store double %19, double* %20, align 8
  store i32 0, i32* %3, align 4
  br label %26

21:                                               ; preds = %14
  br label %22

22:                                               ; preds = %21
  %23 = load double, double* %6, align 8
  %24 = call double @ebur128_energy_to_loudness(double %23)
  %25 = load double*, double** %5, align 8
  store double %24, double* %25, align 8
  store i32 0, i32* %3, align 4
  br label %26

26:                                               ; preds = %22, %17, %12
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @ebur128_energy_shortterm(i32*, double*) #1

declare dso_local double @ebur128_energy_to_loudness(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
